--- a/.render.yaml
+++ b/.render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: audiveris-flask-api
     env: python
-    buildCommand: ./render-build.sh
+    buildCommand: chmod +x render-build.sh && ./render-build.sh
     startCommand: python pdf_to_musicxml.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9 
+        value: 3.9.18 
